[gd_scene load_steps=5 format=3 uid="uid://o2gfrhokrf2k"]

[ext_resource type="Theme" uid="uid://cr5mj0hosrwmu" path="res://assets/main_menu_theme.tres" id="1_8u4c8"]
[ext_resource type="Script" path="res://scripts/game_gui.gd" id="2_7cj7f"]

[sub_resource type="LabelSettings" id="LabelSettings_nqs6t"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_io4eb"]
font_size = 24
font_color = Color(1, 0.349096, 0.32517, 1)

[node name="GameGUI" type="Control"]
process_mode = 3
z_index = 1000
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8u4c8")
script = ExtResource("2_7cj7f")

[node name="TimeFilter" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.431373, 0.415686, 0, 0.0470588)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score: 0"
label_settings = SubResource("LabelSettings_nqs6t")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_bottom = 54.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "120 seconds left today!"
label_settings = SubResource("LabelSettings_nqs6t")
horizontal_alignment = 2

[node name="DayLabel" type="Label" parent="MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Day 1"
label_settings = SubResource("LabelSettings_nqs6t")
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="TyphoonWarningLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "TYPHOON WARNING!"
label_settings = SubResource("LabelSettings_io4eb")

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
